profile reach added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +20,21 @@
   
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="author" content="P Aditya">
+    <meta name="description" content="Website by P Aditya">
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "P Aditya",
+    "url": "https://faang-forces.netlify.app/",
+    "sameAs": [
+      "https://www.linkedin.com/in/adityasony967/",
+      "https://x.com/p_aditya15",
+      "https://github.com/p-aditya15"
+      ]
+    }
+    </script>
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -121,6 +135,8 @@
 
      
        </footer>
+       <p class="mt-5 mb-3 text-body-secondary">&copy; 2022–2023 ,by <a href="https://adityasony.w3spaces.com/">P Aditya</a></p>
+
       </div>
      </div>
 
