Added master | grandmaster page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <a href="https://drive.google.com/drive/folders/18L8-P3OMV_Pv_kdXY_sq-JuOHa8Ih_Ss?usp=sharing" target="_blank" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" ></i>Get Started: Readme & About</a>
     
 
-      <div id="message" class="message">Master | GrandMaster : Coming soon</div>
+      <div id="message" class="message">Master | GrandMaster : Loading ....</div>
 
      
        <footer class="w3-content w3-padding-64 w3-text-black w3-xlarge">
@@ -131,6 +131,7 @@
     message.style.display = "block";
     setTimeout(function() {
       message.style.display = "none";
+      window.location.href = "/culminiscent.html";
     }, 2000);
   }
   </script>
